--- a/gui/src/Student/Home/Home.module.css
+++ b/gui/src/Student/Home/Home.module.css
@@ -85,6 +85,7 @@
   margin-right: 40px;
   margin-top: 30px;
   text-decoration: none;
+  box-shadow: 0 4px 8px rgb(0 0 0 / 3%);
 }
 
 .courseInfo{
@@ -145,4 +146,15 @@
 
 .checkIcon{
     color: rgb(20, 214, 130);
+}
+
+.courseKeepStudying{
+  text-align: right;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #ff9100;
+    margin-top: auto;
+    text-decoration: none;
 }
