--- a/gui/src/Student/ListInstructor/ListInstructor.module.css
+++ b/gui/src/Student/ListInstructor/ListInstructor.module.css
@@ -22,6 +22,7 @@
     margin-right: 40px;
     margin-top: 30px;
     text-decoration: none;
+    box-shadow: 0 4px 8px rgb(0 0 0 / 3%);
   }
   
   .courseInfo{
