--- a/gui/src/Student/ViewCourse/ViewCourse.module.css
+++ b/gui/src/Student/ViewCourse/ViewCourse.module.css
@@ -92,6 +92,7 @@
     border-radius: 20px;
     margin-top: 30px;
     margin-left: 10px;
+    box-shadow: 0 4px 8px rgb(0 0 0 / 3%);
 }
 
 .priceCourse{
