--- a/gui/src/Instructor/Layout/Menu/Menu.module.css
+++ b/gui/src/Instructor/Layout/Menu/Menu.module.css
@@ -34,8 +34,10 @@
 }
 
 .menu{
-    display: inline;
+    display: flex;
+    flex-direction: column;
     align-content: center;
+    height: 88%;
 }
 .menuTitle{
     color: #a1a8ae;
@@ -51,8 +53,14 @@
 .itemMenu{
     display: flex;
     flex-direction: column;
-    font-size: 14px;
+    font-size: 16px;
     padding-left: 2rem;
+    height: 10%;
+}
+
+.linkItem{
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .dropdownReport{
@@ -115,7 +123,7 @@
 
 .itemMenu:hover{
     display: flex;
-    font-size: 14px;
+    font-size: 16px;
     padding-left: 2rem;
     background-color: #d8cdea;
 }
