--- a/gui/src/Student/ViewMyCourse/ViewMyCourse.module.css
+++ b/gui/src/Student/ViewMyCourse/ViewMyCourse.module.css
@@ -160,3 +160,73 @@
     border-radius: 10px;
     margin-top: 5px;
 }
+
+.quizz{
+    height: 50px;
+    line-height: 50px;
+    border-bottom: 1px solid #e6e5e5;
+}
+
+.bodyTest{
+    flex: 3;
+    max-height: 80%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    border-radius: 15px;}
+
+.mainTest{
+    flex: 1;
+    background-color: white;
+    font-size: 20px;
+    padding-left: 20px;
+    font-weight: 400;
+    font-family: Serif;
+    overflow-y: scroll;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.mainTest::-webkit-scrollbar{
+    width: 3px;
+    background-color: transparent;
+}
+
+.mainTest::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.mainTest::-webkit-scrollbar-thumb {
+    background-color:transparent;
+}
+
+.mainAnswer{
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+    border-top: 1px solid black;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.txtAnswer{
+    width: 50px;
+    height: 22px;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+    margin-left: 15px;
+    
+}
+
+.btnNext{
+    background-color: cornflowerblue;
+    color: white;
+    padding: 5px 7px 5px 7px;
+    border: none;
+    border-radius: 5px;
+}
