--- a/gui/src/Instructor/Earning/Earning.module.css
+++ b/gui/src/Instructor/Earning/Earning.module.css
@@ -53,6 +53,7 @@
   justify-content: space-between;
   width: 100%;
   margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 .topCourse {
@@ -60,6 +61,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .headerTopCourse {
